# weather_forecast

./: .env.example  Dockerfile  Makefile  README.md  city.json  docker-compose.yml  pyproject.toml
weather/forecaast/: apps.py
weather/forecast/: forms.py  models.py  serializers.py  urls.py  utils.py  views.py
weather/forecast/migrations/: 0001_initial.py
weather/forecast/templates/forecast/: search.html  weather_city.html
weather/templates/: base.html
weather/users/: forms.py  urls.py  views.py
weather/users/templates/users/: login.html  register.html
weather/weather/: settings.py  urls.py
